<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            style="@style/myStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/about_me"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editText1"
            style="@style/myStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8sp"
            android:text="@string/done"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            style="@style/myStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:textAlignment="center"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:contentDescription="@string/star"
            app:srcCompat="@android:drawable/btn_star_big_on"
            tools:ignore="ImageContrastCheck" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8sp">

            <TextView
                android:id="@+id/textView2"
                style="@style/myStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="8sp"
                android:paddingTop="0sp"
                android:paddingEnd="8sp"
                android:paddingRight="8sp"
                android:paddingBottom="32sp"
                android:text="@string/dog" />
        </ScrollView>
    </LinearLayout>
</layout>